// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check Props Matches snapshot with custom props 1`] = `
<div
  className="dropdown"
  onKeyDown={[Function]}
  style={
    Object {
      "height": null,
      "width": 400,
    }
  }
>
  <button
    ari-describedby={null}
    aria-label="React Simple Dropdown"
    aria-labelledby={null}
    className="dropdown-select custom-class"
    disabled={true}
    id="dropdown"
    onClick={[Function]}
    type="button"
  >
    <div
      className="displayed-value grey"
    >
      Custom Placeholder...
    </div>
    <div
      className="dropdown-arrow down"
    />
  </button>
  <ul
    className="dropdown-content dropdown-content-down"
    style={
      Object {
        "maxHeight": 150,
        "overflowY": "scroll",
      }
    }
  >
    <button
      aria-label="ariaLabel"
      className="className dropdown-option"
      key="1"
      onClick={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      1
    </button>
    <button
      aria-label="ariaLabel"
      className="className dropdown-option"
      key="2"
      onClick={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      2
    </button>
    <button
      aria-label="ariaLabel"
      className="className dropdown-option"
      key="3"
      onClick={[Function]}
      tabIndex="-1"
      title="title"
      type="button"
    >
      <i
        className="fab fa-js-square option-icon"
      />
      3
    </button>
  </ul>
</div>
`;

exports[`Check Props Matches snapshot with default props 1`] = `
<div
  className="dropdown"
  onKeyDown={[Function]}
  style={
    Object {
      "height": null,
      "width": null,
    }
  }
>
  <button
    ari-describedby={null}
    aria-label={null}
    aria-labelledby={null}
    className="dropdown-select"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <div
      className="displayed-value grey"
    >
      Select ...
    </div>
    <div
      className="dropdown-arrow down"
    />
  </button>
  <ul
    className="dropdown-content dropdown-content-down"
    style={Object {}}
  />
</div>
`;
